--- a/index.html
+++ b/index.html
@@ -1,51 +1,185 @@
 <!DOCTYPE html>
 <html>
+    <style>
+        #head1{text-align:center}
+    </style>
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>
-        Sumiran Pokharel WEBSITE
+        WEBSITE
     </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-
     <link rel="stylesheet" href="style.css" />
-
+    <h1 id="head1" style="color:rgb(103, 94, 94);">
+    Sumiran Pokharel</h1>
+    <hr>
 </head>
 
 <body class="container p-3">
-<h1>
-    Sumiran Pokharel
-</h1>
-<hr>
 <i class="bi bi-file-play"></i>
-<nav>
-<button class="bg-info rounded p-2">Home</button>
-<button>Resume</button>
-<button>About</button>
-</nav>
-<h2>
-    Northern Kentucky University
-</h2>
-<b> Mechanical Engineering Sophomore
-</b>
 
-<p>
-    Intern at City of Cincinnati as Research Development Engineering Intern<br>
-    Presidential Ambassador, NKU <br>
-</p>
+<!--navigation Bar-->
+<nav class="navbar pill-nav navbar-expand-lg" >
+    <div class="container-fluid">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <a class="navbar-brand" href="#">SUMPY</a>
+      <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./Images/Gopal Pokharel Resume 1.pdf">Resume</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="www.google.com" target="_blank" tabindex="-1" aria-disabled="true">About</a>
+          </li>
+        </ul>
+        <form class="d-flex">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
+      </div>
+    </div>
+  </nav>
 
-<div>
-    <img src="./Images/IMG_1235.JPG" height="300px" width="300px">
-</div>
+<!-- <div class="pill-nav">
+    <a class="active" href="#home">Home</a>
+    <a href="./Images/Gopal Pokharel Resume 1.pdf" target="_blank">Resume</a>
+    <a href="#">Contact</a>
+    <a href="#about">About</a>
+  </div>-->
 
+<!--<nav>
+    <button>Home</button>
+    <button> <a href= "./Images/Gopal Pokharel Resume 1.pdf" target="_blank">Resume</a></button>
+    <button>About</button>
+</nav> -->
+
+<!--Introcard Horizontal-->
+<div class="card mb-3" style="max-width: 1080px;">
+    <div class="row g-0">
+      <div class="col-md-4">
+        <img src="./Images/IMG_1233 (1).JPG" class="img-fluid rounded-start" alt="...">
+      </div>
+      <div class="col-md-8">
+        <div class="card-body" style="background-color:lightslategrey">
+            <h1>Sumiran Pokharel</h1>
+  <p>Research Development Engineering Co-op, MSD</p>
+  <p>Mechanical Engineering Sophomore</p>
+  <p>Northern Kentucky University</p>
+  <div style="margin: 24px 0;">
+  <a href=""><i class="fa fa-instagram"></i></a>
+  <a href="https://github.com/Sumpy1?tab=repositories"><i class="fa fa-github"></i></a>
+  <a href="https://www.linkedin.com/in/sumiran-pokharel-981449191/"><i class="fa fa-linkedin"></i></a>
+  <a href="https://www.facebook.com/sumiran.pokharel.3/"><i class="fa fa-facebook"></i></a>
+  </div>
+  <p><button style="background-color: lightslategrey;">Contact</button></p>
+        </div>
+      </div>
+    </div>
+  </div>
+ 
+ 
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<!--Intro Card vertical 
+<div class="card">
+  <img src="./Images/IMG_1233 (1).JPG" alt="Sumiran" style="width:100%" height="300px" width="300px">
+  <h1>Sumiran Pokharel</h1>
+  <p class="title">Research Development Engineering Co-op, MSD</p>
+  <p>Northern Kentucky University</p>
+  <div style="margin: 24px 0;">
+  <a href=""><i class="fa fa-instagram"></i></a>
+  <a href="https://github.com/Sumpy1?tab=repositories"><i class="fa fa-github"></i></a>
+  <a href="https://www.linkedin.com/in/sumiran-pokharel-981449191/"><i class="fa fa-linkedin"></i></a>
+  <a href="https://www.facebook.com/sumiran.pokharel.3/"><i class="fa fa-facebook"></i></a>
+  </div>
+  <p><button>Contact</button></p>
+</div> -->
+
+<div class="container">
+    <form action="action_page.php">
+  
+      <label for="fname">Name</label>
+      <input type="text" id="fname" name="firstname" placeholder="Your name..">
+  
+      <label for="lname">Email</label>
+      <input type="text" id="Email" name="Email" placeholder="johndoe@gmail.com">
+  
+      <label for="country">Country</label>
+      <select id="country" name="country">
+        <option value="australia">Nepal</option>
+        <option value="canada">Canada</option>
+        <option value="usa">USA</option>
+        <option value="usa">Australia</option>
+        <option value="usa">India</option>
+      </select>
+  
+      <label for="subject">Subject</label>
+      <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+  
+      <input type="submit" value="Submit">
+  
+    </form>
+  </div> 
+
+ 
+<!-- Youtube-->
+  <iframe width="420" height="315" src="https://www.youtube.com/embed/QW8J9mp1RO0" title="CANADA VISA APPLICATION PROCESS FOR F-1 STUDENTS | STEP BY STEP FULL PROCESS" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen class="center"></iframe>
+ 
+<iframe width="420" height="315" src="https://www.youtube.com/embed/FKROYzWRiQ0" title="Lost For Words" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="420" height="315" src="https://www.youtube.com/embed/kqLY4Au5pwU" title="Wangden Sherpa - Lavender Lemonade [Official Lyric Video]" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+<!-- Carousel-->
+<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="./Images/Where-to-Stay-in-Cincinnati.jpeg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="./Images/pexels-craig-adderley-1563355.jpeg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="./Images/pexels-engin-akyurt-1435752.jpg" class="d-block w-100" alt="...">
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
 
 </body>
 
-<footer class="bg-light text-center text-lg-start">
+<footer class="bg-light text-center text-lg-start" >
+
+    <h3>Social Media Network</h3>
+    <ul>
+    <li><a href="#" class="fa fa-facebook"></a>
+<img src=""><a href="https://www.facebook.com/sumiran.pokharel.3/" target="_blank">Facebook</a></li>
+    <li><a href="#" class="fa fa-linkedin"></a><img src=""> <a href="https://www.linkedin.com/in/sumiran-pokharel-981449191/" target="_blank"> LinkedIn</a>
+    </li>
+    <li><a href="#" class="fa fa-github"></a><img src=""> <a href= "https://github.com/Sumpy1?tab=repositories" target="_blank">
+    Github
+</a></li>
+</ul>
     <!-- Copyright -->
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-      © 2020 Copyright:
-      <a class="text-dark" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+      © 2023 Copyright: All Rights Reserved by Sumiran Pokharel
     </div>
     <!-- Copyright -->
   </footer>
