--- a/index.html
+++ b/index.html
@@ -3,39 +3,44 @@
     <style>
         #head1{text-align:center}
     </style>
-<head>
+    <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>
-        WEBSITE
+        Sumpy
     </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css" />
-    <h1 id="head1" style="color:rgb(103, 94, 94);">
+    <h1 id="head1" style="color:rgb(103, 94, 94)" >
     Sumiran Pokharel</h1>
     <hr>
-</head>
+    </head>
 
-<body class="container p-3">
+<body class="container p-3" style="background-size:cover">
 <i class="bi bi-file-play"></i>
 
+
+
 <!--navigation Bar-->
-<nav class="navbar pill-nav navbar-expand-lg" >
+ <nav class="navbar pill-nav navbar-expand-lg" >
     <div class="container-fluid">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <a class="navbar-brand" href="#">SUMPY</a>
       <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0" >
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./Images/Gopal Pokharel Resume 1.pdf">Resume</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="www.google.com" target="_blank" tabindex="-1" aria-disabled="true">About</a>
+            <a class="nav-link" href="./About.html" target="_blank" tabindex="-1" aria-disabled="true">About</a>
+          </li>
+          <li class="nav-contact">
+            <a class="nav-link" href="./contact.html" target="_blank" tabindex="-1" aria-disabled="true">Contact</a>
           </li>
         </ul>
         <form class="d-flex">
@@ -66,22 +71,26 @@
         <img src="./Images/IMG_1233 (1).JPG" class="img-fluid rounded-start" alt="...">
       </div>
       <div class="col-md-8">
-        <div class="card-body" style="background-color:lightslategrey">
-            <h1>Sumiran Pokharel</h1>
-  <p>Research Development Engineering Co-op, MSD</p>
-  <p>Mechanical Engineering Sophomore</p>
-  <p>Northern Kentucky University</p>
-  <div style="margin: 24px 0;">
-  <a href=""><i class="fa fa-instagram"></i></a>
-  <a href="https://github.com/Sumpy1?tab=repositories"><i class="fa fa-github"></i></a>
-  <a href="https://www.linkedin.com/in/sumiran-pokharel-981449191/"><i class="fa fa-linkedin"></i></a>
-  <a href="https://www.facebook.com/sumiran.pokharel.3/"><i class="fa fa-facebook"></i></a>
-  </div>
-  <p><button style="background-color: lightslategrey;">Contact</button></p>
+        <div class="card-body" style="background-color:lightslategrey; background-size: cover;">
+            <p style="font-family: 'Times New Roman', Times, serif;">Hello everyone! I am Sumiran Pokharel currently pursuing Mechanical Engineering at Northern Kentucky University.I am from Nepal and I have been in the states for 2 years now. I am also working as a Research development engineering co-op at Metropolitan Sewer distric of Cincinnati.
+            I love listening to music, riding motorbikes and breaking and remodelling gadgets. You can connect with me through any of the social media below.</p>
+            <div style="margin: 24px 0;">
+             <a href=""><i class="fa fa-instagram"></i></a>
+             <a href="https://github.com/Sumpy1?tab=repositories"><i class="fa fa-github"></i></a>
+             <a href="https://www.linkedin.com/in/sumiran-pokharel-981449191/"><i class="fa fa-linkedin"></i></a>
+            <a href="https://www.facebook.com/sumiran.pokharel.3/"><i class="fa fa-facebook"></i></a>
+            </div>
+            <em>Tired of lying in the sunshine, staying home to watch the rain,
+              You are young and life is long, and there is time to kill today,
+              And then one day you find ten years have got behind you,
+              No one told you when to run, you missed the starting gun. - Pink Floyd</em>
+            <br style="background-color: lightslategrey;">
+            <br style="background-color: lightslategrey;">
         </div>
-      </div>
+    </div>
     </div>
   </div>
+
  
  
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -102,7 +111,43 @@
   <p><button>Contact</button></p>
 </div> -->
 
-<div class="container">
+ 
+<!-- Youtube-->
+  <iframe width="420" height="315" src="https://www.youtube.com/embed/QW8J9mp1RO0" title="CANADA VISA APPLICATION PROCESS FOR F-1 STUDENTS | STEP BY STEP FULL PROCESS" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen class="center"></iframe>
+ 
+<iframe width="420" height="315" src="https://www.youtube.com/embed/FKROYzWRiQ0" title="Lost For Words" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="420" height="315" src="https://www.youtube.com/embed/kqLY4Au5pwU" title="Wangden Sherpa - Lavender Lemonade [Official Lyric Video]" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+<!-- Carousel-->
+<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="./Images/Where-to-Stay-in-Cincinnati.jpeg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="./Images/HD-wallpaper-bush-and-flower-under-himalayas-mountain-nepal-during-sunset-nature.jpeg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="./Images/298938045_484416050353439_2811760177920884407_n.jpeg" class="d-block w-100" alt="...">
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+
+  <!--Contact form
+  <div class="container">
     <form action="action_page.php">
   
       <label for="fname">Name</label>
@@ -128,40 +173,7 @@
     </form>
   </div> 
 
- 
-<!-- Youtube-->
-  <iframe width="420" height="315" src="https://www.youtube.com/embed/QW8J9mp1RO0" title="CANADA VISA APPLICATION PROCESS FOR F-1 STUDENTS | STEP BY STEP FULL PROCESS" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen class="center"></iframe>
- 
-<iframe width="420" height="315" src="https://www.youtube.com/embed/FKROYzWRiQ0" title="Lost For Words" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-<iframe width="420" height="315" src="https://www.youtube.com/embed/kqLY4Au5pwU" title="Wangden Sherpa - Lavender Lemonade [Official Lyric Video]" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-
-<!-- Carousel-->
-<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-    </div>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="./Images/Where-to-Stay-in-Cincinnati.jpeg" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="./Images/pexels-craig-adderley-1563355.jpeg" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="./Images/pexels-engin-akyurt-1435752.jpg" class="d-block w-100" alt="...">
-      </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
-  </div>
+-->
 
 </body>
 
